# cmd_slam

./: .gitignore  .gitmodules  README.md  dependencies.rosinstall  fix_eigen_deps.sh  install.bash  install.zsh
Docker/: dockerfile  run_client.sh  run_server.sh
Result/cmd_stereo_dso/: TimeResult.txt  Traject.txt
Result/cmd_stereo_dso/campus/: other_result.txt
Result/fast_stereo_dso/: TimeResult.txt
Result/fast_stereo_dso/single/: evo_traject.sh
Result/groundtruth/Honglou/: gt_Honglou_123.txt  gt_Honglou_big.txt  gt_Honglou_big345.txt
Result/groundtruth/campus/: gt_A.txt  gt_B.txt  gt_C.txt
Result/groundtruth/kitti/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
Result/groundtruth/malaga/: 05.txt  06.txt  07.txt  08.txt  10.txt
Result/orb_slam2/single/: evo_traject.sh
Result/script/: convert2kitti.py
cmd_backend/: CMakeLists.txt  package.xml
cmd_backend/cmd_sys/: cmd_backend_node.cpp
cmd_backend/launch/: cmd_backend_node.launch
cmd_backend/src/: agent.cpp  agent.hpp  backend.cpp  backend.hpp  communicator.cpp  communicator.hpp  loop_handler.cpp  loop_handler.hpp  loopframe.cpp  loopframe.hpp  map.cpp  map.hpp  typedefs_backend.hpp  utils.hpp
cmd_backend/src/KimeraRPGO/: RobustSolver.cpp
cmd_backend/src/KimeraRPGO/outlier/: OutlierRemoval.h  Pcm.h
cmd_backend/src/KimeraRPGO/utils/: GeometryUtils.h
cmd_backend/src/TimeRecord/: TimeRecord.cpp  TimeRecord.hpp
cmd_backend/src/loop_closure/: generate_spherical_points.h  icp.h  scancontext.cpp  scancontext.hpp  search_place.h
cmd_backend/src/optimization/: cmd_sim3.cpp  cmd_sim3.hpp  optimization.cpp  optimization.hpp  pose_average.hpp
cmd_backend/src/optimization/pcm_pgo/: CMakeLists.txt  outlier_removal.hpp  pcm.cpp  pcm.hpp  pcm_solver.cpp  pcm_solver.hpp  pcm_test.cpp  solver_params.hpp
cmd_backend/src/optimization/pcm_pgo/max_clique_finder/: findClique.cpp  findClique.h  findCliqueHeu.cpp  graphIO.cpp  graphIO.h  utils.cpp
cmd_backend/src/optimization/pcm_pgo/utils/: CMakeLists.txt  GeometryUtils.h  GraphUtils.cpp  GraphUtils.h  TypeUtils.h
cmd_backend/src/pcm/: pcm_solver.cpp  pcm_solver.hpp
cmd_backend/src/visualization/: agent_display.cpp  agent_display.hpp  loopframe_display.cpp  loopframe_display.hpp  pangolin_viewer.cpp  pangolin_viewer.hpp  viewer.hpp
cmd_backend/src/visualization/codsv_visual/: AgentDisplay.cpp  AgentDisplay.h  LoopFrameDisplay.cpp  LoopFrameDisplay.h  PangolinLoopViewer.cpp  PangolinLoopViewer.h
cmd_comm/: CMakeLists.txt  package.xml
cmd_comm/Thridparty/cereal/: CMakeLists.txt
cmd_comm/Thridparty/cereal/include/cereal/: access.hpp  cereal.hpp  macros.hpp  specialize.hpp  version.hpp
cmd_comm/Thridparty/cereal/include/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
cmd_comm/Thridparty/cereal/include/cereal/details/: helpers.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
cmd_comm/Thridparty/cereal/include/cereal/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  functional.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
cmd_comm/Thridparty/cereal/include/cereal/types/concepts/: pair_associative_container.hpp
cmd_comm/Thridparty/cereal/sandbox/sandbox_shared_lib/: base.hpp  derived.hpp
cmd_comm/Thridparty/cereal/unittests/: array.hpp  atomic.hpp  basic_string.hpp  bitset.hpp  chrono.hpp  common.hpp  complex.hpp  defer.hpp  deque.hpp  forward_list.hpp  list.hpp  load_construct.hpp  map.hpp  memory.hpp  memory_cycles.hpp  multimap.hpp  multiset.hpp  pair.hpp  pod.hpp  polymorphic.hpp  portable_binary_archive.hpp  priority_queue.hpp  queue.hpp  set.hpp  stack.hpp  structs.hpp  structs_minimal.hpp  structs_specialized.hpp  tuple.hpp  unordered_loads.hpp  unordered_map.hpp  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp  user_data_adapters.hpp  valarray.hpp  vector.hpp  versioning.hpp
cmd_comm/Thridparty/cereal/unittests/boost/: boost_variant.hpp
cmd_comm/Thridparty/cereal/unittests/cpp17/: optional.hpp  variant.hpp
cmd_comm/Thridparty/mysylar/: CMakeLists.txt
cmd_comm/Thridparty/mysylar/mysylar/: address.cc  bytearray.cc  bytearray.h  config.hpp  fd_manager.cc  fd_manager.h  fiber.hpp  hook.cc  http.h  iomanager.cc  iomanager.hpp  log.cc  macro.hpp  mutex.hpp  scheduler.cc  scheduler.hpp  servlet.h  socket.cc  socket_stream.cc  socket_stream.h  sylar.h  tcp_server.h  thread.cc  thread.h  timer.cc  timer.h  timer.hpp  util.cc
cmd_comm/Thridparty/mysylar/mytest/: test_bytearray.cc  test_fiber.cc  test_hook.cc  test_iomanager.cc  test_scheduler.cc
cmd_comm/Thridparty/mysylar/thrid-party/yaml-cpp/: .codedocs
cmd_comm/src/: cmd_comm.hpp  comm_base.cpp  comm_base.hpp  typedefs.hpp
cmd_comm/src/TimeRecord/: TimeRecord.cpp  TimeRecord.hpp
cmd_comm/src/msgs/: msg_loopframe.cpp  msg_loopframe.hpp
cmd_frontend/: CMakeLists.txt  package.xml
cmd_frontend/src/: cmd_frontend.hpp  communicator.cpp  communicator.hpp  typedefs_frontend.hpp  vo_comm.cpp  vo_comm.hpp
cmd_frontend/src/Comm/: vo_comm.cpp  vo_comm.hpp
docker/: Dockerfile  run.sh
stereo_vo/cmd_stereo_dso/: CMakeLists.txt  kitti_single_seqence.bash  package.xml  result.txt  run_kitti.bash
stereo_vo/cmd_stereo_dso/bash/: kitti360_sequence.bash  kitti_seqence.bash  malaga_sequence.bash
stereo_vo/cmd_stereo_dso/launch/: agent.launch  campus.launch  cmd_campus.launch  cmd_honglou.launch  cmd_kitti.launch  cmd_kitti360.launch  cmd_malaga.launch  kimera.launch  kitti360.launch  malaga.launch
stereo_vo/cmd_stereo_dso/src/: main_dso_pangolin.cpp  main_dso_ros.cpp
stereo_vo/fast_stereo_dso/: CMakeLists.txt  kitti_single_seqence.bash  malaga_single_sequence.bash  package.xml  run.bash
stereo_vo/fast_stereo_dso/launch/: cmd_kimera.launch  cmd_kitti.launch  cmd_malaga_seqnum.launch  (+5 more)
(+320 files in other folders)
